<resources>
    <string name="app_name" translatable="false">GeniusXP</string>

    <string name="welcome_title">Hello, welcome to GeniusXP!</string>
    <string name="welcome_description">The best event experience you\'ve ever seen! Log in to get the full experience!</string>
    <string name="welcome_already_have_account_btn">I already have an account</string>
    <string name="welcome_create_new_account_btn">Create new account</string>

    <string name="signin_title">Sign in</string>
    <string name="signin_forgot_password_btn"><u>I forgot my password</u></string>
    <string name="signin_submit_btn">Sign in</string>
    <string name="signin_signup_btn">Create new account</string>

    <string name="signup_title">Sign up</string>
    <string name="signup_submit_btn">Sign up</string>
    <string name="signup_already_have_account_btn">I already have an account</string>


    <string name="recover_password_title">Recover password</string>
    <string name="recover_password_submit_btn">Send recovery email</string>

    <string name="input_name_hint">Full name</string>
    <string name="input_birth_hint">Date of birth</string>
    <string name="input_cpf_hint">Identifier Document</string>
    <string name="input_email_hint">Email address</string>
    <string name="input_password_hint">Password</string>
    <string name="input_search_speaker">Search by speaker name…</string>
    <string name="input_send_message">Send a new message…</string>

    <string name="agree_terms">By continuing you accept the <u>Terms of Use</u> and <u>Privacy Policy</u> defined by GeniusXP.</string>

    <string name="tickets_title">Your tickets</string>
    <string name="tickets_next">Next events</string>
    <string name="tickets_previous">Previous events</string>

    <string name="profile_edit_profile_btn">Edit profile</string>
    <string name="profile_logout_btn">Logout</string>
    <string name="profile_about">About me</string>
    <string name="profile_interests">Interests</string>

    <string name="menu_tickets">Tickets</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_interaction">Interaction</string>
    <string name="menu_map">Map</string>

    <string name="schedule_order_btn">Sort by</string>
    <string name="schedule_filter_btn">Filter</string>

    <string name="speaker_social_btn">LinkedIn</string>
    <string name="speaker_rate_btn">Rate</string>

    <string name="badge_speaker">Speaker</string>
    <string name="badge_live">Live</string>
</resources>