<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="48dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/ButtonSecondary"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/zinc_100"
                app:icon="@drawable/baseline_chevron_left_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/zinc_950"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_title"
                android:fontFamily="@font/poppins_bold"
                android:textSize="32sp"
                android:layout_marginTop="2dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/input_name_hint"
            android:layout_marginBottom="8dp"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/input_birth_hint"
            android:layout_marginBottom="8dp"
            android:autofillHints="birthday"
            android:focusable="false" />

        <EditText
            android:id="@+id/cpfInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/input_cpf_hint"
            android:layout_marginBottom="8dp"
            android:autofillHints="cpf" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/input_email_hint"
            android:layout_marginBottom="8dp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/input_password_hint"
            android:autofillHints="password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/signup_submit_btn"
            style="@style/ButtonPrimary"
            android:layout_marginBottom="8dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alreadyLoginButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/signup_already_have_account_btn"
            style="@style/ButtonSecondary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginVertical="32dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms"
                android:textAlignment="center"
                android:textColor="@color/zinc_600"
                android:layout_marginHorizontal="32dp"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
