<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.TicketsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_name"
                android:scaleType="fitStart" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:theme="@style/ButtonSecondary"
                app:icon="@drawable/icon_bell"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userAvatar"
                android:layout_width="112dp"
                android:layout_height="112dp"
                app:shapeAppearanceOverlay="@style/RoundedImage"
                app:strokeColor="@color/primary_500"
                app:strokeWidth="4dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:fontFamily="@font/poppins_bold"
                tools:text="User Name"
                android:textAlignment="center"
                android:textSize="32sp"
                android:breakStrategy="balanced" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editProfileButton"
                    style="@style/ButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:text="@string/profile_edit_profile_btn"
                    app:icon="@drawable/icon_edit"
                    android:layout_marginEnd="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logoutButton"
                    style="@style/ButtonSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:text="@string/profile_logout_btn"
                    app:icon="@drawable/icon_logout" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/profile_about"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                tools:text="This is user description"
                android:textColor="@color/zinc_600"
                android:textSize="16sp"
                android:lineHeight="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/profile_interests"
                android:textSize="20sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/userInterests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
