<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/shape_card"
    android:clipToOutline="true"
    android:layout_marginBottom="24dp"
    android:paddingVertical="24dp"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/speakerImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            app:strokeColor="@color/primary_500"
            app:strokeWidth="4dp"
            android:padding="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/speakerName"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                tools:text="ThePrimeagen"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/zinc_800"
                android:textSize="20sp"
                android:layout_marginEnd="8dp"
                android:lineSpacingMultiplier="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/badge_speaker"
                    android:textSize="11sp"
                    android:background="@drawable/shape_badge"
                    android:textColor="@color/primary_500"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="2dp"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/speakerNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:gravity="center"
                    tools:text="🇧🇷"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/zinc_800"
                    android:textSize="24sp"
                    android:layout_marginEnd="8dp"
                    android:lineSpacingMultiplier="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/speakerBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Streamer e Youtuber americano conhecido por sua obsessão por Neovim, engenharia e atualmente trabalha na Netflix."
        android:textColor="@color/zinc_700"
        android:textSize="16sp"
        android:layout_marginVertical="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/linkedinButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            style="@style/ButtonGhost"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/zinc_200"
            android:text="@string/speaker_social_btn"
            app:icon="@drawable/icon_linkedin"
            app:iconGravity="textStart"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rateButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            style="@style/ButtonPrimary"
            android:layout_marginEnd="12dp"
            android:text="@string/speaker_rate_btn"
            app:icon="@drawable/icon_star"
            app:iconGravity="textStart" />
    </LinearLayout>
</LinearLayout>
